z-index fixes

--- a/frontend/src/legacy/components/express-route-map/components/features/driver-marker/driver-marker.scss
+++ b/frontend/src/legacy/components/express-route-map/components/features/driver-marker/driver-marker.scss
@@ -5,7 +5,7 @@
   pointer-events: none;
 
   &.--faded {
-    opacity: 0.3;
+    opacity: 0.4;
   }
 }
 
