--- a/frontend/src/legacy/components/express-route-map/components/features/express-route-stop-marker/express-route-stop-marker.scss
+++ b/frontend/src/legacy/components/express-route-map/components/features/express-route-stop-marker/express-route-stop-marker.scss
@@ -5,7 +5,7 @@
   pointer-events: none;
 
   &.--faded {
-    opacity: 0.3;
+    opacity: 0.4;
   }
 }
 
@@ -68,7 +68,6 @@
   padding: 4px;
   font-size: 0.75em;
   margin-bottom: 10px;
-  z-index: 1;
 
   &::after
   {
